# laba08

./: CMakeLists.txt  ChangeLog.md  README.md  test.cpp
.github/workflows/: main.yml
